force-app/main/default/objects/Data_Collection_HTML__c/Data_Collection_HTML__c.object-meta.xml
<CustomObject>
    <description>Used for data collection landing page.</description>
    <label>Data Collection HTML</label>
    <nameField>
        <label>Data Collection HTML Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Collection HTML</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>