force-app/main/default/objects/Data_Collection_HTML__c/fields/Currently_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Currently_Displayed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Displayed</label>
    <type>Checkbox</type>
</CustomField>