force-app/main/default/objects/Data_Collection_HTML__c/fields/Currently_Displaying__c.field-meta.xml
<CustomField>
    <fullName>Currently_Displaying__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Displaying</label>
    <type>Checkbox</type>
</CustomField>