force-app/main/default/objects/Data_Collection_HTML__c/fields/HTML__c.field-meta.xml
<CustomField>
    <fullName>HTML__c</fullName>
    <label>HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>